# advent-of-code

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  new_year.sh
2018/: Cargo.toml
2018/input/: 01.txt  02.txt  04.txt  06.txt  07.txt
2019/: Cargo.toml
2019/src/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_16.rs  day_17.rs  day_19.rs  day_2.rs  day_20.rs  day_21.rs  day_22.rs  day_24.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  main.rs
2020/: Cargo.toml
2020/src/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_2.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  day_five.rs  day_four.rs  day_one.rs  day_seven.rs  day_six.rs  day_template.rs  day_three.rs  day_two.rs  input.rs  main.rs
2021/: .gitignore  Cargo.toml
2021/src/: day_1.rs  day_2.rs  day_22.rs  day_3.rs  main.rs
2022/: Cargo.toml
2022/input/: 04.txt  05.txt  09.txt  10.txt  11.txt  12.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  23.txt  24.txt  25.txt
2022/src/: lib.rs
2023/: Cargo.toml
2024/: Cargo.toml
2024/input/: 23.txt
2024/src/: grid.rs  lib.rs  main.rs  point.rs  timer.rs
2025/: Cargo.toml
2025/input/: 05.txt  06.txt  08.txt  09.txt  10.txt  11.txt  12.txt
2025/src/: lib.rs
aoc_shared/: Cargo.toml
aoc_shared/src/: grid.rs  lib.rs  point.rs  timer.rs
