[workspace]
members = ["20[0-9]*", "aoc_shared"]
resolver = "3"

[workspace.package]
authors = ["butlerx <butlerx@notthe.cloud>"]
edition = "2024"
version = "0.1.0"
readme = "README.md"
repository = "http://github.com/butlerx/advent-of-code"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
