[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["butlerx <butlerx@notthe.cloud>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
regex = "1"
itertools = "0.9"
