[package]
name = "aoc_2022"
version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
serde_json = "1.0"
